ADDED STYLES TAG PER REVIEW COMMETS

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html> 
-  <! Please use css styles tag here
+<html>
+	<HEAD>
+<STYLE>
+HI <! Please use css styles tag here
 <body> Hey guys check out my new html file
-  <I> guys I love YOU<I>
-
+<I> guys I love YOU<I>
+</style>
+</HEAD>
 
 </html>
