Am I trying anything

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
 	<HEAD>
 <STYLE>
-HI <! Please use css styles tag here
+<hi> <! Please use css styles tag here,</HI
+	>
 <body> Hey guys check out my new html file
 <I> guys I love YOU<I>
 </style>
+</Body>
 </HEAD>
 
 </html>
