ADDED STYLE AGAIN

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html>
+<HTML>
 	<HEAD>
 <STYLE>
 HI <! Please use css styles tag here
-<body> Hey guys check out my new html file
+<body> Hey guys check out my new html file<</body>
 <I> guys I love YOU<I>
-</style>
+</STYLE>
 </HEAD>
 
-</html>
+</HTML>
